--- a/templates/password_reset_form.html
+++ b/templates/password_reset_form.html
@@ -42,9 +42,10 @@
     
     <form method="POST" class="reset-password">
       {% csrf_token %}
+
       <div class="form-group">
-        <label for="id_email">Email: </label>
-      <input placeholder="example@gmail.com" type="email" maxlength="254" name="email"  required />
+        <label for="id_email">Email*</label>
+      <input placeholder="example@gmail.com" type="text" name="email" autocomplete="email" id="id_email" required>
       </div>
     </form>
 
