--- a/templates/password_reset_confirm.html
+++ b/templates/password_reset_confirm.html
@@ -6,12 +6,14 @@
 
 {% if validlink %}
 
-<h1>Set a new password!</h1>
+<div class="card">
+  <h1>Set a new password!</h1>
 <form method="POST">
   {% csrf_token %}
   {{ form.as_p }}
   <input type="submit" value="Change my password">
 </form>
+</div>
 
 {% else %}
 
